[package]
name = "ltrace"
version = "0.1.0"
edition = "2024"
authors = ["James Ren <jamesvren@163.com>"]
repository = "https://github.com/jamesvren/ltrace"
readme= "README.md"
keywords = ["log", "logger", "logging", "tracing", "trace"]
description = "A rolling file writer for tracing and log crates with rotation, compression, and dynamic log level support"
license = "MIT OR Apache-2.0"

[features]
default = ["log", "compression"]
compression = ["flate2"]
log = ["dep:log"]
console = ["log", "dep:colored"]

[dependencies]
colored = { version = "3", optional = true }
chrono = "0.4"
flate2 = { version = "1.0", optional = true }
log = { version = "0.4", features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3"
